--- a/css/styles.css
+++ b/css/styles.css
@@ -387,6 +387,11 @@ img {
   padding: 96px 0;
 }
 
+.portfolio-img {
+  width: 100%;
+  object-fit: cover;
+}
+
 .portfolio-list {
   width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
