--- a/css/styles.css
+++ b/css/styles.css
@@ -31,23 +31,22 @@ ol {
 
 img {
   display: block;
-  object-fit: contain;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
-  max-width: 288px;
-  padding-left: 15px;
-  padding-right: 15px;
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .header {
-  margin: 0 auto;
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-  max-width: 320px;
 }
 
 .header-container {
@@ -65,7 +64,7 @@ img {
   font-family: "Raleway", sans-serif;
   letter-spacing: 0.03em;
   margin-right: 76px;
-  padding: 24px 0;
+  padding: 17px 0;
 }
 
 .part-logo {
@@ -387,11 +386,6 @@ img {
   padding: 96px 0;
 }
 
-.portfolio-img {
-  width: 100%;
-  object-fit: cover;
-}
-
 .portfolio-list {
   width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -450,6 +444,8 @@ img {
 
 .footer {
   background: #2e2f42;
+  padding-top: 97px;
+  padding-bottom: 96px;
 }
 
 .footer-container {
@@ -498,8 +494,18 @@ img {
 }
 
 .end-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-right: 0px;
   width: 100%;
+  margin-bottom: 72px;
+}
+
+.footer-social-apps {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 72px;
 }
 
@@ -563,7 +569,7 @@ img {
 .footer-email {
   border: 1px solid #ffffff;
   border-radius: 4px;
-  width: 264px;
+  width: 288px;
   height: 40px;
   background-color: transparent;
   padding-left: 16px;
@@ -613,7 +619,7 @@ img {
   border-radius: 4px;
   width: 288px;
   min-height: 584px;
-  padding: 72px 24px 24px;
+  padding: 72px 16px 24px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -685,11 +691,11 @@ img {
 
 .form-input:focus-within,
 .form-input:focus {
-  border-color: #2e2f42;
+  border-color: #4d5ae5;
 }
 
 .form-input:focus-within + .form-icon {
-  fill: #2e2f42;
+  fill: #4d5ae5;
 }
 
 .part-form {
@@ -822,31 +828,47 @@ img {
   background: #404bbf;
 }
 
-.nav-overlay {
+.mobile-nav {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99999;
-  background-color: #ffffff;
-  padding: 72px 24px 40px 16px;
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-overlay.is-open {
-  opacity: 1;
-  pointer-events: auto;
+.nav-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 72px 24px 40px 16px;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-nav.is-open {
+    opacity: 1;
+    pointer-events: auto;
+  }
+}
+
+.mobile-navigation {
+  margin-bottom: auto;
 }
 
 .mobile-nav-list {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  margin-bottom: 168px;
 }
 
 .mobile-nav-link {
@@ -858,16 +880,23 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.mobile-nav-first-link {
+  color: #404bbf;
+}
+
 .mobile-nav-link:hover,
 .mobile-nav-link:focus {
   color: #404bbf;
+}
+
+.mobile-contact {
+  margin-bottom: 48px;
 }
 
 .mobile-address-list {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin-bottom: 48px;
 }
 
 .mobile-contact-link {
@@ -878,6 +907,10 @@ img {
   color: #434455;
   font-style: normal;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-first-contact-link {
+  color: #4d5ae5;
 }
 
 .mobile-contact-link:hover,
@@ -893,11 +926,11 @@ img {
 
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 736px;
+    max-width: 768px;
   }
 
-  .header {
-    max-width: 768px;
+  .header .logo {
+    padding: 25px 0;
   }
 
   .contact-list {
@@ -931,6 +964,10 @@ img {
     font-size: 56px;
     line-height: 1.07;
     max-width: 496px;
+  }
+
+  .order-service {
+    margin-top: 36px;
   }
 
   .topic {
@@ -976,7 +1013,8 @@ img {
     flex-direction: row;
     align-items: baseline;
     flex-wrap: wrap;
-    padding: 96px 0px 96px 108px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 
   .end-text {
@@ -994,8 +1032,14 @@ img {
     align-self: flex-start;
   }
 
+  .footer-email {
+    width: 264px;
+  }
+
   .modal {
     width: 408px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
@@ -1013,10 +1057,12 @@ img {
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
-  .header {
-    max-width: 1440px;
+  .header .logo {
+    padding: 21px 0;
   }
 
   .contact-list {
@@ -1045,6 +1091,10 @@ img {
     font-size: 56px;
     line-height: 1.07;
     max-width: 496px;
+  }
+
+  .order-service {
+    margin-top: 48px;
   }
 
   .section-benefits {
@@ -1087,7 +1137,7 @@ img {
   }
 
   .portfolio-list {
-    width: calc((100% - 3 * 24px) / 3);
+    width: calc((100% - 2 * 24px) / 3);
   }
 
   .portfolio-items {
@@ -1095,10 +1145,14 @@ img {
     column-gap: 24px;
   }
 
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
   .footer-container {
     align-items: baseline;
     flex-wrap: nowrap;
-    padding: 100px 0 100px 0;
   }
 
   .end-text {
